opam-version: "2.0"
maintainer: "stripedpajamas273@gmail.com"
authors: [ "Peter Squicciarini" ]
license: "MIT"
homepage: "https://github.com/stripedpajamas/ulid"
doc: "https://github.com/stripedpajamas/ulid"
bug-reports: "https://github.com/stripedpajamas/ulid/issues"
dev-repo: "git+https://github.com/stripedpajamas/ulid.git"
synopsis: "ULIDs for OCaml"
description: """
ULIDs are Universally Unique Lexicographically Sortable Identifiers
"""
depends: [
  "dune" {build & >= "1.0.1"}
  "nocrypto"
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]